# Xposed-SGameHook

./: .gitignore  LICENSE  README.md  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  sgame_hook.cpp
app/src/main/cpp/byopen/: CMakeLists.txt
app/src/main/java/com/huajiqaq/sgamehook/: XposedMod.java  XposedMod.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: arrays.xml
gradle/wrapper/: gradle-wrapper.properties
